--- a/styles/all.css
+++ b/styles/all.css
@@ -255,14 +255,12 @@ body
 		}
 		#examples #developmt.cw02
 		{
-			/*color: #ff6666;*/
-			color: #cf2033;
+			color: #ff7997;
 		}
 			#developmt .reversal.cw02
 			{
 				color: #333;
-				/*background-color: #ff6666;*/
-				background-color: #cf2033;
+				background-color: #ff7997;
 			}
 
 #examples button
