micro color tweak

--- a/styles/all.css
+++ b/styles/all.css
@@ -255,7 +255,7 @@ color: #957c93;
 		}
 		#nav button.cw03:hover
 		{
-			background-color: #a3a3a3;
+			background-color: #9f9f9f;
 		}
 
 /* <!-- Header --> */
